# routes/teacher.js
@@ -5,10 +5,10 @@ const router = express.Router();
 
 const teacherController = require('../controllers/teacher.js');
 
-// router.get('/', );
-// router.get('/:id', );
-// router.post('/', )
-// router.put('/:id', );
-// router.delete('/:id', );
+router.get('/', teacherController.getAll);
+router.get('/:id', teacherController.getSingle);
+router.post('/', validation.teacherRules(), validation.checkValidate, isAuthenticated, teacherController.createTeacher);
+router.put('/:id', validation.teacherRules(), validation.checkValidate, isAuthenticated, teacherController.updateTeacher);
+router.delete('/:id', isAuthenticated, teacherController.deleteTeacher);
 
 module.exports = router;
